@@ -27,6 +27,7 @@ import java.util.ArrayList;
 import xyz.zedler.patrick.grocy.database.AppDatabase;
 import xyz.zedler.patrick.grocy.model.Location;
 import xyz.zedler.patrick.grocy.model.Product;
+import xyz.zedler.patrick.grocy.model.ProductBarcode;
 import xyz.zedler.patrick.grocy.model.ProductGroup;
 import xyz.zedler.patrick.grocy.model.QuantityUnit;
 import xyz.zedler.patrick.grocy.model.ShoppingListItem;
@@ -45,6 +46,7 @@ public class StockOverviewRepository {
                 ArrayList<ProductGroup> productGroups,
                 ArrayList<StockItem> stockItems,
                 ArrayList<Product> products,
+                ArrayList<ProductBarcode> productBarcodes,
                 ArrayList<ShoppingListItem> shoppingListItems,
                 ArrayList<Location> locations
         );
@@ -66,6 +68,7 @@ public class StockOverviewRepository {
         private ArrayList<ProductGroup> productGroups;
         private ArrayList<StockItem> stockItems;
         private ArrayList<Product> products;
+        private ArrayList<ProductBarcode> productBarcodes;
         private ArrayList<ShoppingListItem> shoppingListItems;
         private ArrayList<Location> locations;
 
@@ -80,6 +83,7 @@ public class StockOverviewRepository {
             productGroups = new ArrayList<>(appDatabase.productGroupDao().getAll());
             stockItems = new ArrayList<>(appDatabase.stockItemDao().getAll());
             products = new ArrayList<>(appDatabase.productDao().getAll());
+            productBarcodes = new ArrayList<>(appDatabase.productBarcodeDao().getAll());
             shoppingListItems = new ArrayList<>(appDatabase.shoppingListItemDao().getAll());
             locations = new ArrayList<>(appDatabase.locationDao().getAll());
             return null;
@@ -87,7 +91,7 @@ public class StockOverviewRepository {
 
         @Override
         protected void onPostExecute(Void aVoid) {
-            if(listener != null) listener.actionFinished(quantityUnits, productGroups, stockItems, products, shoppingListItems, locations);
+            if(listener != null) listener.actionFinished(quantityUnits, productGroups, stockItems, products, productBarcodes, shoppingListItems, locations);
         }
     }
 
@@ -96,6 +100,7 @@ public class StockOverviewRepository {
             ArrayList<ProductGroup> productGroups,
             ArrayList<StockItem> stockItems,
             ArrayList<Product> products,
+            ArrayList<ProductBarcode> productBarcodes,
             ArrayList<ShoppingListItem> shoppingListItems,
             ArrayList<Location> locations,
             StockOverviewDataUpdatedListener listener
@@ -106,6 +111,7 @@ public class StockOverviewRepository {
                 productGroups,
                 stockItems,
                 products,
+                productBarcodes,
                 shoppingListItems,
                 locations,
                 listener
@@ -120,6 +126,7 @@ public class StockOverviewRepository {
         private final ArrayList<ProductGroup> productGroups;
         private final ArrayList<StockItem> stockItems;
         private final ArrayList<Product> products;
+        private final ArrayList<ProductBarcode> productBarcodes;
         private final ArrayList<ShoppingListItem> shoppingListItems;
         private final ArrayList<Location> locations;
 
@@ -129,6 +136,7 @@ public class StockOverviewRepository {
                 ArrayList<ProductGroup> productGroups,
                 ArrayList<StockItem> stockItems,
                 ArrayList<Product> products,
+                ArrayList<ProductBarcode> productBarcodes,
                 ArrayList<ShoppingListItem> shoppingListItems,
                 ArrayList<Location> locations,
                 StockOverviewDataUpdatedListener listener
@@ -139,6 +147,7 @@ public class StockOverviewRepository {
             this.productGroups = productGroups;
             this.stockItems = stockItems;
             this.products = products;
+            this.productBarcodes = productBarcodes;
             this.shoppingListItems = shoppingListItems;
             this.locations = locations;
         }
@@ -153,6 +162,8 @@ public class StockOverviewRepository {
             appDatabase.stockItemDao().insertAll(stockItems);
             appDatabase.productDao().deleteAll();
             appDatabase.productDao().insertAll(products);
+            appDatabase.productBarcodeDao().deleteAll();
+            appDatabase.productBarcodeDao().insertAll(productBarcodes);
             appDatabase.shoppingListItemDao().deleteAll();
             appDatabase.shoppingListItemDao().insertAll(shoppingListItems);
             appDatabase.locationDao().deleteAll();
